--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+  line-height: 1.5;
+}
+
+/*
 .App {
   text-align: center;
 }
@@ -18,7 +23,51 @@
   font-size: large;
 }
 
+
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}*/
+
+.app-heading {
+  padding: 10px 5px;
+  text-align: center;
+  color: white;
+  background: #2e7c31;
+}
+
+.book {
+  width: 140px;
+}
+.book-title,
+.book-authors {
+  font-size: 0.8em;
+}
+.book-title {
+  margin-top: 10px;
+}
+.book-authors {
+  color: #999;
+}
+
+.book-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.book-list li {
+  padding: 10px 15px;
+  text-align: left;
+}
+
+.shelf-title {
+  font-weight: 800;
+  text-align: left;
+  margin-left: 10px;
+  border-bottom: 1px solid grey;
 }
