--- a/src/App.css
+++ b/src/App.css
@@ -172,3 +172,15 @@ body, .app {
   text-align: center;
   font-size: 0.8em;
 }
+
+/* Panel */
+
+.panel {
+  margin: 5px 10px 5px 10px;
+}
+
+/* Pageheader */
+
+.page-header {
+  text-align: center;
+}
